[gd_scene load_steps=5 format=2]

[ext_resource path="res://client/player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 0.7

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.67451, 0.882353, 0.105882, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 3 )
radial_segments = 8
rings = 4

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.6, 0 )
shape = SubResource( 1 )

[node name="PathFollow" type="PathFollow" parent="."]
rotation_mode = 4

[node name="GroundDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1000, 0, 0, 0, 1, 0, 10, 0 )
enabled = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 22.0
margin_top = 21.0
margin_right = 161.0
margin_bottom = 88.0

[node name="MphLabel" type="Label" parent="Control/Panel"]
margin_left = 10.0
margin_top = 11.0
margin_right = 137.0
margin_bottom = 37.0
text = "Ran: %.2f miles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepsLabel" type="Label" parent="Control/Panel"]
margin_left = 10.6292
margin_top = 39.4737
margin_right = 116.629
margin_bottom = 70.4737
text = "Steps / sec: %.1f
"

[node name="UpdateUiTimer" type="Timer" parent="Control"]
autostart = true

[node name="Eye" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.12905, 1.02694 )

[node name="EyeCamera" type="Camera" parent="Eye"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.85772 )
current = true
far = 5000.0

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = null
[connection signal="timeout" from="Control/UpdateUiTimer" to="." method="_on_UpdateUiTimer_timeout"]
